Re-written exact search